# docker-aicodebox

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yml
aicodebox/: __init__.py
aicodebox/adapters/: __init__.py  base.py
aicodebox/modes/api/: __main__.py  auth.py  files.py  mcp_server.py  oai.py  runs.py  server.py  workspace.py
aicodebox/modes/cron/: __init__.py  __main__.py  config.py  scheduler.py
aicodebox/modes/mcp/: __init__.py  __main__.py
aicodebox/modes/telegram/: __init__.py  __main__.py  bot.py  config.py  cron_inbox.py  overrides.py  utils.py
aicodebox/shared/: choices.py  json_envelope.py  logging.py  runner.py
aicodebox/tests/: conftest.py  test_api_run_response.py  test_cron_config.py  test_cron_inbox.py  test_cron_scheduler.py  test_json_extraction.py  test_oai_schema.py  test_oai_tools.py  test_overrides.py  test_runner_stream.py  test_telegram_bot.py  test_telegram_config.py  test_telegram_utils.py  test_usage_accumulation.py
