[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aicodebox"
version = "0.9.0"
description = "Agent-agnostic base for aicodebox images (adapter contract + api/telegram/cron/mcp modes)"
license = { text = "WTFPL" }
requires-python = ">=3.12"
authors = [{ name = "psyb0t" }]
dependencies = [
    "pyyaml==6.0.3",
    "fastapi==0.136.1",
    "uvicorn==0.47.0",
    "pydantic==2.13.4",
    "python-telegram-bot==21.11.1",
    "croniter==3.0.4",
    "mcp==1.27.1",
]

[tool.hatch.build.targets.wheel]
packages = ["aicodebox"]
exclude = ["aicodebox/tests"]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[tool.uv]
exclude-newer = "2026-05-19T00:00:00Z"

[tool.pytest.ini_options]
testpaths = ["aicodebox/tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
